all product add all

--- a/pyramid_cube.html
+++ b/pyramid_cube.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swing Tower | Shipra Play House</title>
+    <title>Montessori Learning Toys | Shipra Play House</title>
     <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="./assets/css/swing_tower.css">
+    <link rel="stylesheet" href="./assets/css/montessori_learning.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-       <!-- Header start -->
+  <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -239,48 +239,48 @@
     <!-- offcanvas section end -->
 
 
-    <!-- swing_tower start -->
-    <section class="swing_tower">
+    <!-- montessori_learning start -->
+    <section class="montessori_learning">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="toys-games.html">Swing Tower</a></b></h2>
+                    <h2 class="pt-5"><b><a href="toys-games.html">Pyramid Cube</a></b></h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 pt-4">
-                    <img src="./assets/img/Products img/Edited/F401/1.jpeg" alt="education_1"
+                    <img src="./assets/img/Products img/Edited/F204/3.jpeg" alt="education_1"
                         class="img-fluid mainProductImage" id="mainDisplay" loading="lazy">
                     <div class="d-flex justify-content-center gap-2 mt-4 flex-wrap">
-                        <img src="./assets/img/Products img/Edited/F401/1.jpeg" class="thumb-img active"
+                        <img src="./assets/img/Products img/Edited/F204/3.jpeg" class="thumb-img active"
                             onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F401/2.jpeg" class="thumb-img"
+                        <img src="./assets/img/Products img/Edited/F204/4.jpeg" class="thumb-img"
                             onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
-                        <img src="./assets/img/Products img/Edited/F401/9.jpeg" class="thumb-img"
+                        <img src="./assets/img/Products img/Edited/F204/5.jpeg" class="thumb-img"
                             onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         <a href="#" role="button" data-bs-toggle="modal" data-bs-target="#youtube1">
-                            <img src="./assets/img/Products img/Edited/F401/10.jpeg" class="thumb-img "
+                            <img src="./assets/img/Products img/Edited/F204/6.jpeg" class="thumb-img "
                                 onclick="changeImage(this)" onmouseover="changeImage(this)" loading="lazy">
                         </a>
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
                     <div class="border box p-4 mb-3">
-                        <h4><b>Swing Tower</b></h4>
+                        <h4><b>Pyramid Cube</b></h4>
                         <h3><b>₹ 199</b></h3>
                         <span>Free Delivery</span>
                         <div class="text-center mt-4">
-                            <a href="https://wa.link/ry7nq3" class="button rounded-1" id="whats-link">
+                            <a href="https://wa.link/oppixs" class="button rounded-1" id="whats-link">
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
                                 CONNECT US</a>
+
                         </div>
                     </div>
                     <div class="border box p-4">
                         <p>Boost Your Child's Learning Through Play</p>
                         <p><b> Looking for toys that are both fun and educational?</b></p>
                         <p>Discover our carefully curated collection designed to support your child’s cognitive, motor,
-                            and
-                            social development.</p>
+                            and social development.</p>
                         <ul class="list-unstyled">
                             <li>✅ High-Quality & Safe Materials</li>
                             <li>✅ Designed by Experts in Child Development</li>
@@ -288,21 +288,79 @@
                             <li>✅ Encourages Imagination, Focus & Skill-Building</li>
                         </ul>
                         <ul class="list-unstyled">
-                            <li><b>🌀 Enhances balance & coordination</b></li>
-                            <li><b>🧠 Boosts spatial awareness</b></li>
-                            <li><b>💪 Builds core muscle strength</b></li>
-                            <li><b>😃 Encourages outdoor play and fun</b></li>
+                            <li><b>🧠 Boosts problem-solving and critical thinking skills</b></li>
+                            <li><b>🎨 Improves color recognition and visual memory</b></li>
+                            <li><b>✋ Develops fine motor skills and hand coordination</b></li>
+                            <li><b>⏳ Teaches patience and concentration</b></li>
                         </ul>
 
                     </div>
 
 
                 </div>
+                <!-- <div class="col-lg-6 px-5 pt-4">
+                    <div class="border box p-4">
+                        <h2><b>Alpha Numeric Puzzle Game</b></h2>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td class="fw6">Material</td>
+                                    <td>Plastic</td>
+                                </tr>
+                                <tr>
+                                    <td class="fw6">Color</td>
+                                    <td>NA</td>
+                                </tr>
+                                <tr>
+                                    <td class="fw6">Age Group</td>
+                                    <td>3+</td>
+                                </tr>
+                                <tr>
+                                    <td class="fw6">Packaging</td>
+                                    <td>Printed Box</td>
+                                </tr>
+                                <tr>
+                                    <td class="fw6">Inner</td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td class="fw6">Outer/ Master</td>
+                                    <td>112</td>
+                                </tr>
+                                <tr>
+                                    <td class="fw6">Rate</td>
+                                    <td>51 +12% Gst</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <p class="mb-1 mt-2"><b>Alpha Numeric Puzzle Game – Learn Through Play!</b></p>
+                        <p>Make early learning fun and engaging with the Alpha Numeric Puzzle Game! Designed to
+                            introduce kids to letters and numbers in a hands-on way, this colorful puzzle encourages
+                            cognitive development while keeping little minds entertained. </p>
+                        <p><b>Features:</b></p>
+                        <ul>
+                            <li><b>Complete Learning Set: </b> Includes all 26 letters (A–Z) and numbers 0–9 to build
+                                literacy and numeracy skills.</li>
+                            <li><b>Bright & Engaging: </b>Vivid colors and fun shapes capture children’s attention and
+                                spark curiosity.</li>
+
+                        </ul>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/xmj64w" class="button" id="whats-link">
+                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            <a href="#" class="button" id="buy-now">
+                                <span class="h5"><i class="fa-solid fa-cart-shopping"></i> </span>
+                                BUY NOW</a>
+                        </div>
+                    </div>
+                </div> -->
             </div>
 
         </div>
     </section>
-    <!-- swing_tower end -->
+    <!-- montessori_learning end -->
+
     <!-- footer start -->
     <section class="contact mt-5">
         <div class="container-fluid px-5">
