all product add this ru

--- a/all_product.html
+++ b/all_product.html
@@ -254,7 +254,7 @@
                                     <h5 class="card-title">Wooden Table Tennis Trainer</h5>
                                     <p class="card-text">Wooden Table Tennis Trainer improves reflexes, focus, and hand
                                         coordination.</p>
-                                    <h4><b>₹ 199</b></h4>
+                                    <h4><b>₹ 299</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="wooden_table.html" class="btn btn-primary">Buy Now</a>
                                 </div>
@@ -279,7 +279,7 @@
                                 <img src="./assets/img/Products img/Edited/F405/1.jpg" class="card-img-top"
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
-                                    <h5 class="card-title">Triangle Chess Game</h5>
+                                    <h5 class="card-title">Triangle Chess Triggle</h5>
                                     <p class="card-text">Triangle Chess Game promotes strategy, logic, focus, and
                                         spatial thinking.</p>
                                     <h4><b>₹ 249</b></h4>
@@ -307,10 +307,10 @@
                                 <img src="./assets/img/Products img/Edited/F407/1.jpg" class="card-img-top"
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
-                                    <h5 class="card-title">Memory Chess Game</h5>
+                                    <h5 class="card-title">Memory Chess Board Game</h5>
                                     <p class="card-text">Improves memory, focus, strategy, thinking, and visual
                                         recognition skills.</p>
-                                    <h4><b>₹ 199</b></h4>
+                                    <h4><b>₹ 249</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="memory_chess.html" class="btn btn-primary">Buy Now</a>
                                 </div>
@@ -321,7 +321,7 @@
                                 <img src="./assets/img/Products img/Edited/F400/1.jpg" class="card-img-top"
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
-                                    <h5 class="card-title">Gobble Game</h5>
+                                    <h5 class="card-title">Gobble Board Game</h5>
                                     <p class="card-text">Gobble Game develops memory, strategy, focus, fun, and thinking
                                         skills.</p>
                                     <h4><b>₹ 199</b></h4>
@@ -352,7 +352,7 @@
                                     <h5 class="card-title">2 In 1 Montessori Learning Toy</h5>
                                     <p class="card-text">Develops fine motor skills, color sorting, and counting fun.
                                     </p>
-                                    <h4><b>₹ 299</b></h4>
+                                    <h4><b>₹ 249</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="montessori_learning.html" class="btn btn-primary">Buy Now</a>
                                 </div>
@@ -419,7 +419,7 @@
                                 <img src="./assets/img/Products img/Edited/F201/3.jpg" class="card-img-top"
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
-                                    <h5 class="card-title"> Inﬁnity Cube</h5>
+                                    <h5 class="card-title"> Inﬁnity Cube Fidget Toy</h5>
                                     <p class="card-text">Infinity Cube improves focus, relieves stress, portable, fun
                                         fidget toy.</p>
                                     <h4><b>₹ 149</b></h4>
@@ -436,7 +436,7 @@
                                     <h5 class="card-title">Starlink Building Blocks</h5>
                                     <p class="card-text">Starlink Building Blocks boost creativity, imagination, focus,
                                         learning, and fun.</p>
-                                    <h4><b>₹ 199</b></h4>
+                                    <h4><b>₹ 180</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="starlink_educational.html" class="btn btn-primary">Buy Now</a>
                                 </div>
@@ -450,7 +450,7 @@
                                     <h5 class="card-title">Building Blocks With Wheel 75 Pcs Set</h5>
                                     <p class="card-text">Enhances creativity, motor skills, imagination, learning, and
                                         fun.</p>
-                                    <h4><b>₹ 149</b></h4>
+                                    <h4><b>₹ 175</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="building_blocks_with.html" class="btn btn-primary">Buy Now</a>
                                 </div>
@@ -464,7 +464,7 @@
                                     <h5 class="card-title">Geometric Shape Shorter </h5>
                                     <p class="card-text">Geometric Shape Sorter builds shape recognition, logic, fun,
                                         creativity.</p>
-                                    <h4><b>₹ 149</b></h4>
+                                    <h4><b>₹ 145</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="geometric_shape.html" class="btn btn-primary">Buy Now</a>
                                 </div>
@@ -478,7 +478,7 @@
                                     <h5 class="card-title">Montessori Color Matching Board</h5>
                                     <p class="card-text">StaMontessori Color Matching Board builds color recognition,
                                         sorting, fun.</p>
-                                    <h4><b>₹ 299</b></h4>
+                                    <h4><b>₹ 199</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="montessori_learning.html" class="btn btn-primary">Buy Now</a>
                                 </div>
@@ -503,7 +503,7 @@
                                 <img src="./assets/img/Products img/Edited/F204/3.jpeg" class="card-img-top"
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
-                                    <h5 class="card-title">Pyramid Cube</h5>
+                                    <h5 class="card-title">Triangle Pyramid Speedcube Puzzle</h5>
                                     <p class="card-text">Pyramid Cube boosts brain power, creativity, and
                                         problem-solving ability.</p>
                                     <h4><b>₹ 199</b></h4>
@@ -517,9 +517,9 @@
                                 <img src="./assets/img/Products img/Edited/F408/3.jpeg" class="card-img-top"
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
-                                    <h5 class="card-title">Flip & Matching Game</h5>
+                                    <h5 class="card-title">Memory Chess Flip & Match Game</h5>
                                     <p class="card-text">Boosts memory, focus, fun learning with colorful flipping cards.</p>
-                                    <h4><b>₹ 299</b></h4>
+                                    <h4><b>₹ 249</b></h4>
                                     <span>Free Delivery</span>
                                     <a href="flip_matching_game.html" class="btn btn-primary">Buy Now</a>
                                 </div>
@@ -530,7 +530,7 @@
                                 <img src="./assets/img/Products img/Edited/F401/2.jpeg" class="card-img-top"
                                     alt="product-img" loading="lazy">
                                 <div class="card-body">
-                                    <h5 class="card-title">Balancing/ Tetra Tower</h5>
+                                    <h5 class="card-title">Balancing Tetra Tower</h5>
                                     <p class="card-text">Stack, balance, roll – builds focus, fun, and motor skills!</p>
                                     <h4><b>₹ 199</b></h4>
                                     <span>Free Delivery</span>
