--- a/toys-games.html
+++ b/toys-games.html
@@ -343,7 +343,7 @@
                                             <h5 class="card-title">2 in 1 Montessori Learning toy</h5>
                                             <p class="card-text">Boosts early learning with fun, hands-on activities and
                                                 dual-purpose play.</p>
-                                            <h4><b>₹ 299</b></h4>
+                                            <h4><b>₹ 249</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="montessori_learning.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -534,7 +534,7 @@
                                         <img src="./assets/img/Products img/Edited/F405/4.jpg" class="card-img-top"
                                             alt="product-img" loading="lazy">
                                         <div class="card-body">
-                                            <h5 class="card-title">Triggle Chess Game </h5>
+                                            <h5 class="card-title">Triangle Chess Triggle </h5>
                                             <p class="card-text">A unique, strategic game that blends classic chess with
                                                 a triangular twist.</p>
                                             <h4><b>₹ 249</b></h4>
@@ -562,10 +562,10 @@
                                         <img src="./assets/img/Products img/Edited/F703/board1.jpeg"
                                             class="card-img-top" alt="product-img" loading="lazy">
                                         <div class="card-body">
-                                            <h5 class="card-title">Memory Chess Game</h5>
+                                            <h5 class="card-title">Memory Chess Board Game</h5>
                                             <p class="card-text">Colorful memory game to boost focus, recall, and fun
                                                 learning.</p>
-                                            <h4><b>₹ 199</b></h4>
+                                            <h4><b>₹ 249</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="memory_chess.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -576,7 +576,7 @@
                                         <img src="./assets/img/Products img/Edited/F400/3.jpg" class="card-img-top"
                                             alt="product-img" loading="lazy">
                                         <div class="card-body">
-                                            <h5 class="card-title">Gobble Game</h5>
+                                            <h5 class="card-title">Gobble Board Game</h5>
                                             <p class="card-text">Fun strategy game with stacking pieces for memory and
                                                 logic skills.</p>
                                             <h4><b>₹ 199</b></h4>
@@ -1010,7 +1010,7 @@
                                             <h5 class="card-title">Wooden Table Tennis Trainer</h5>
                                             <p class="card-text">Wooden Table Tennis Trainer – focus,
                                                 and hand coordination.</p>
-                                            <h4><b>₹ 199</b></h4>
+                                            <h4><b>₹ 299</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="wooden_table.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -1068,7 +1068,7 @@
                                         <img src="./assets/img/Products img/Edited/F201/3.jpg" class="card-img-top"
                                             alt="product-img" loading="lazy">
                                         <div class="card-body">
-                                            <h5 class="card-title">Infinity Cube </h5>
+                                            <h5 class="card-title">Infinity Cube Fidget Toy</h5>
                                             <p class="card-text">Infinity Cube – Fidget toy for focus, fun, and stress
                                                 relief.</p>
                                             <h4><b>₹ 149</b></h4>
