--- a/triggle_chess.html
+++ b/triggle_chess.html
@@ -245,7 +245,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="toys-games.html">Triggle Chess Game</a></b></h2>
+                    <h2 class="pt-5"><b><a href="toys-games.html">Triggle Chess Triggle</a></b></h2>
                 </div>
             </div>
             <div class="row">
@@ -267,7 +267,7 @@
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
                     <div class="border box p-4 mb-3">
-                        <h4><b>Triggle Chess Game</b></h4>
+                        <h4><b>Triggle Chess Triggle</b></h4>
                         <h3><b>₹ 249</b></h3>
                         <span>Free Delivery</span>
                         <div class="text-center mt-4">
