--- a/gobble_game.html
+++ b/gobble_game.html
@@ -244,7 +244,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="toys-games.html">Gobble Game</a></b></h2>
+                    <h2 class="pt-5"><b><a href="toys-games.html">Gobble Board Game</a></b></h2>
                 </div>
             </div>
             <div class="row">
@@ -266,7 +266,7 @@
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
                     <div class="border box p-4 mb-3">
-                        <h4><b>Gobble Game</b></h4>
+                        <h4><b>Gobble Board Game</b></h4>
                         <h3><b>₹ 199</b></h3>
                         <span>Free Delivery</span>
                         <div class="text-center mt-4">
