--- a/memory_chess.html
+++ b/memory_chess.html
@@ -243,7 +243,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="toys-games.html">Memory Chess Game</a></b></h2>
+                    <h2 class="pt-5"><b><a href="toys-games.html">Memory Chess Board Game</a></b></h2>
                 </div>
             </div>
             <div class="row">
@@ -265,8 +265,8 @@
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
                      <div class="border box p-4 mb-3">
-                        <h4><b>Memory Chess Game</b></h4>
-                        <h3><b>₹ 199</b></h3>
+                        <h4><b>Memory Chess Board Game</b></h4>
+                        <h3><b>₹ 249</b></h3>
                         <span>Free Delivery</span>
                            <div class="text-center mt-4">
                             <a href="https://wa.link/65c6ec" class="button rounded-1" id="whats-link">
