--- a/toys-games.html
+++ b/toys-games.html
@@ -1081,8 +1081,8 @@
                                     <div class="card">
                                         <img src="./assets/img/Products img/Edited/F704/1.jpeg" class="card-img-top"
                                             alt="product-img" loading="lazy">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Wooden Russian Blocks Puzzles for Kids</h5>
+                                        <div class="card-body">Magic Beans Puzzle Spinner Cube
+                                            <h5 class="card-title">Wooden Russian Blocks Puzzles</h5>
                                             <p class="card-text"> Colorful wooden blocks boost logic, creativity, focus, and fun</p>
                                             <h4><b>₹ 149</b></h4>
                                             <span>Free Delivery</span>
