--- a/toys-games.html
+++ b/toys-games.html
@@ -1081,7 +1081,7 @@
                                     <div class="card">
                                         <img src="./assets/img/Products img/Edited/F704/1.jpeg" class="card-img-top"
                                             alt="product-img" loading="lazy">
-                                        <div class="card-body">Magic Beans Puzzle Spinner Cube
+                                        <div class="card-body">    
                                             <h5 class="card-title">Wooden Russian Blocks Puzzles</h5>
                                             <p class="card-text"> Colorful wooden blocks boost logic, creativity, focus, and fun</p>
                                             <h4><b>₹ 149</b></h4>
