all add this pesa

--- a/toys-games.html
+++ b/toys-games.html
@@ -343,7 +343,7 @@
                                             <h5 class="card-title">2 in 1 Montessori Learning toy</h5>
                                             <p class="card-text">Boosts early learning with fun, hands-on activities and
                                                 dual-purpose play.</p>
-                                            <h4><b>₹ 249</b></h4>
+                                            <h4><b>₹ 325</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="montessori_learning.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -357,7 +357,7 @@
                                             <h5 class="card-title">Shape Matching Game</h5>
                                             <p class="card-text">Fun and educational toy to match shapes, colors, and
                                                 boost motor skills.</p>
-                                            <h4><b>₹ 299</b></h4>
+                                            <h4><b>₹ 399</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="shape_matching.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -371,7 +371,7 @@
                                             <h5 class="card-title">Shape Shorter Cude</h5>
                                             <p class="card-text">Shape Shorter Cube: Match shapes, stack pieces, learn
                                                 through play.</p>
-                                            <h4><b>₹ 199</b></h4>
+                                            <h4><b>₹ 225</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="shape_shorter.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -413,7 +413,7 @@
                                             <h5 class="card-title">Wooden Alphabet,Number</h5>
                                             <p class="card-text">Colorful wooden blocks with alphabets for early
                                                 learning.</p>
-                                            <h4><b>₹ 249</b></h4>
+                                            <h4><b>₹ 299</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="alpha_numeric_puzzle.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -473,10 +473,10 @@
                                         <img src="./assets/img/Products img/Edited/F105/A6.jpg" class="card-img-top"
                                             alt="product-img" loading="lazy">
                                         <div class="card-body">
-                                            <h5 class="card-title">Starlink Educational Blocks</h5>
+                                            <h5 class="card-title">Starlink Building Blocks</h5>
                                             <p class="card-text">Creative and colorful toys to boost kids' learning and
                                                 imagination.</p>
-                                            <h4><b>₹ 180</b></h4>
+                                            <h4><b>₹ 199</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="starlink_educational.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -504,7 +504,7 @@
                                             <h5 class="card-title">Building Blocks With Wheel</h5>
                                             <p class="card-text">Building blocks set with wheels, perfect for creative
                                                 play and fun.</p>
-                                            <h4><b>₹ 169</b></h4>
+                                            <h4><b>₹ 199</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="building_blockss.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -551,7 +551,7 @@
                                             <h5 class="card-title">IQ Game - 120 Challenges</h5>
                                             <p class="card-text">IQ Game with 120 brain-teasing challenges for sharp
                                                 logical thinking.</p>
-                                            <h4><b>₹ 249</b></h4>
+                                            <h4><b>₹ 299</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="iq_game.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -565,7 +565,7 @@
                                             <h5 class="card-title">Memory Chess Board Game</h5>
                                             <p class="card-text">Colorful memory game to boost focus, recall, and fun
                                                 learning.</p>
-                                            <h4><b>₹ 249</b></h4>
+                                            <h4><b>₹ 349</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="memory_chess.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -579,7 +579,7 @@
                                             <h5 class="card-title">Gobble Board Game</h5>
                                             <p class="card-text">Fun strategy game with stacking pieces for memory and
                                                 logic skills.</p>
-                                            <h4><b>₹ 199</b></h4>
+                                            <h4><b>₹ 225</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="gobble_game.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -607,7 +607,7 @@
                                             <h5 class="card-title">Tic Tac Toe Classic Game</h5>
                                             <p class="card-text">Classic Tic Tac Toe game for fun, strategy, and quick
                                                 thinking.</p>
-                                            <h4><b>₹ 99</b></h4>
+                                            <h4><b>₹ 149</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="tic_tac_toe.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -1010,7 +1010,7 @@
                                             <h5 class="card-title">Wooden Table Tennis Trainer</h5>
                                             <p class="card-text">Wooden Table Tennis Trainer – focus,
                                                 and hand coordination.</p>
-                                            <h4><b>₹ 299</b></h4>
+                                            <h4><b>₹ 399</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="wooden_table.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -1057,7 +1057,7 @@
                                             <h5 class="card-title">Magic Beans Puzzle Spinner Cube</h5>
                                             <p class="card-text">Magic Bean Cube Spinner provides fidgeting fun and
                                                 stress relief.</p>
-                                            <h4><b>₹ 199</b></h4>
+                                            <h4><b>₹ 230</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="magic_beans.html" class="btn btn-primary">Buy Now</a>
                                         </div>
@@ -1071,7 +1071,7 @@
                                             <h5 class="card-title">Infinity Cube Fidget Toy</h5>
                                             <p class="card-text">Infinity Cube – Fidget toy for focus, fun, and stress
                                                 relief.</p>
-                                            <h4><b>₹ 149</b></h4>
+                                            <h4><b>₹ 199</b></h4>
                                             <span>Free Delivery</span>
                                             <a href="infinity_cube.html" class="btn btn-primary">Buy Now</a>
                                         </div>
